--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,26 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MovLib"
+        xmlns:local="clr-namespace:MovLib" xmlns:views="clr-namespace:MovLib.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1200" Loaded="Window_Loaded">
-    <Window.Resources>
-        <CollectionViewSource x:Key="movieViewSource"/>
-        <CollectionViewSource x:Key="movieDirectorViewSource"
-                Source="{Binding Movies, Source={StaticResource movieViewSource}}"/>
-       </Window.Resources>
+        Title="MainWindow" Height="800" Width="1200">
     <Grid>
-        <DataGrid x:Name="categoryDataGrid" AutoGenerateColumns="False" 
-          EnableRowVirtualization="True" 
-          ItemsSource="{Binding Source={StaticResource movieViewSource}}" 
-          Margin="13,13,43,229" RowDetailsVisibilityMode="VisibleWhenSelected">
-            <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding id}"
-                            Header="Movie Id" Width="SizeToHeader"
-                            IsReadOnly="True"/>
-                <DataGridTextColumn Binding="{Binding title}" Header="Title" 
-                            Width="*"/>
-            </DataGrid.Columns>
-        </DataGrid>
+    <views:ShowMoviesView>
+    </views:ShowMoviesView>
+        
     </Grid>
+    
 </Window>
