--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,11 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MovLib" xmlns:views="clr-namespace:MovLib.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1200">
+        Title="MainWindow" MinHeight="400" Height="800" MinWidth="600" Width="1200">
     <Grid>
-    <views:ShowMoviesView>
-    </views:ShowMoviesView>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <!-- Menu -->
+        <Menu Grid.Row="0" Grid.ColumnSpan="2">
+            <MenuItem Header="O aplikaci" Width="60"/>
+        </Menu>
+
+        <!-- Side Panel -->
+        <Grid Grid.Column="0" Grid.Row="1" Background="LightGray">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Button Grid.Row="0" Content="Filmy" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+            <Button Grid.Row="1" Content="Režiséři" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+            <Button Grid.Row="2" Content="Button 3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+            <Button Grid.Row="3" Content="Button 4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+        </Grid>
+
+        <!-- Main Content -->
+        <Grid Grid.Column="1" Grid.Row="1">
+            <views:ShowMoviesView></views:ShowMoviesView>
+        </Grid>
     </Grid>
-    
 </Window>
