--- a/Views/ShowDirectorsView.xaml
+++ b/Views/ShowDirectorsView.xaml
@@ -44,9 +44,11 @@
                 <ColumnDefinition Width="150"/>
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="changeBTN" Content="Upravit" Grid.Column="0" Margin="20" Command="{Binding ChangeCommand}"/>
+            <Button x:Name="changeBTN" Content="Upravit" Grid.Column="0" Margin="20" Command="{Binding ChangeCommand}"
+                    IsEnabled="{Binding Path=SelectedItems.Count, ElementName=moviesDataGrid, Converter={x:Static conv:SelectedItemsToBooleanConverter.Instance}}"/>
             <Button x:Name="deleteBTN" Content="Smazat" Grid.Column="1" Margin="20" Command="{Binding DeleteCommand}"/>
-            <Button x:Name="detailBTN" Content="Detail" Grid.Column="2" Margin="20" Command="{Binding ShowDetailCommand}"/>
+            <Button x:Name="detailBTN" Content="Detail" Grid.Column="2" Margin="20" Command="{Binding ShowDetailCommand}"
+                    IsEnabled="{Binding Path=IsEnabled, ElementName=changeBTN}"/>
 
         </Grid>
     </Grid>
