--- a/Views/MovieDetailView.xaml
+++ b/Views/MovieDetailView.xaml
@@ -7,6 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock x:Name="Title" Text="{Binding Title}" Grid.Row="0" FontSize="32" FontWeight="Bold" Margin="20"/>
     </Grid>
 </UserControl>
