--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -33,8 +33,8 @@
 
             <Button Grid.Row="0" Content="Filmy" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Command="{Binding ShowMoviesCommand}"/>
             <Button Grid.Row="1" Content="Režiséři" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Command="{Binding ShowDirectorsCommand}"/>
-            <Button Grid.Row="2" Content="Button 3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
-            <Button Grid.Row="3" Content="Button 4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+            <Button Grid.Row="2" Content="Přidat Film" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Command="{Binding AddMovieCommand}"/>
+            <Button Grid.Row="3" Content="Přidat Režiséra" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Command="{Binding AddDirectorCommand}"/>
         </Grid>
 
         <!-- Main Content -->
@@ -51,6 +51,12 @@
                 </DataTemplate>
                 <DataTemplate DataType="{x:Type vms:DirectorDetailViewModel}">
                     <views:DirectorDetailView/>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:AddMovieViewModel}">
+                    <views:AddMovieView/>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:AddDirectorViewModel}">
+                    <views:AddDirectorView/>
                 </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding CurrentViewModel}"/>
